压力好大啊，兄弟，要学的还有很多，感觉找不到实习了

--- a/苍穹外卖记录.md
+++ b/苍穹外卖记录.md
@@ -1186,10 +1186,10 @@ Redis的通用命令是不分数据类型的, 都可以使用的命令:
 ```yml
 spring:
 	redis:
-		host:
-		port:
-		database:
-		password:
+		host: localhost
+		port: 6379
+		database: 0-15
+		password: 无密码
 ```
 
 3.编写配置类，创建RedisTemplate对象
