--- a/算法培训.md
+++ b/算法培训.md
@@ -83,7 +83,7 @@ void merge_sort(int* arr,int l,int r)
     }
     while(i <= mid) temp[k++] = arr[i++];
     while(j <= r) temp[k++] = arr[j++];
-    for(i = l,j = 0;i <= r;i++,j++) q[i] = temp[j];
+    for(i = l,j = 0;i <= r;i++,j++) arr[i] = temp[j];
 }
 int main()
 {
