提交一些内容

--- a/面试总结.md
+++ b/面试总结.md
@@ -76,3 +76,10 @@
   - 加上 `main()` 启动
   - 直接开始写业务代码，不用自己写一堆配置。
 
+## JVM,JDK,JRE
+
+jvm是java虚拟机，负责将字节码文件解释或编译为机器码，并执行程序。
+
+jre(java 运行环境)是Java运行时环境，是Java程序运行所需的最小环境。它包含了JVM和一组Java类库，用于支持Java程序的执行。
+
+jdk，是java开发组件，是开发java程序所需的工具集合。它包含了JVM、编译器（javac）、调试器（jdb）等开发工具，以及一系列的类库（如Java标准库和开发工具库）。JDK提供了开发、编译、调试和运行Java程序所需的全部工具和环境。
