--- a/黑马点评.md
+++ b/黑马点评.md
@@ -28,10 +28,6 @@ public Result sendCode(String phone, HttpSession session) {
 5. **后续访问**：从第二次请求开始，你的浏览器每次访问这个网站时，都会**自动带上**这个 JSESSIONID Cookie。
 6. **服务器识别用户**：服务器收到请求后，会读取 Cookie 里的 JSESSIONID，然后根据这个 ID 去内存里找到之前为你创建的那个 HttpSession 对象（用手环钥匙找到你的储物柜）。这样，服务器就“认出”你了！
 
-
-
-
-
 ### **Web 会话技术核心笔记：Cookie, HttpSession & JWT**
 
 #### 核心问题：解决 HTTP 的“健忘症”
@@ -39,8 +35,6 @@ public Result sendCode(String phone, HttpSession session) {
 HTTP 协议是无状态的，服务器无法区分多次请求是否来自同一个用户。以下三种技术都是为了让服务器能“记住”你。
 
 ------
-
-
 
 ### **1. Cookie (超市积分卡)**
 
@@ -55,8 +49,6 @@ HTTP 协议是无状态的，服务器无法区分多次请求是否来自同一
 - **一句话总结：** **一张由服务器发行、由浏览器保管和出示的“身份证”或“积分卡”，用于客户端的状态记录。**
 
 ------
-
-
 
 ### **2. HttpSession (游乐园储物柜)**
 
@@ -77,8 +69,6 @@ HTTP 协议是无状态的，服务器无法区分多次请求是否来自同一
 
 ------
 
-
-
 ### **3. JWT (贵宾全场通行证)**
 
 - **是什么？**
@@ -96,14 +86,14 @@ HTTP 协议是无状态的，服务器无法区分多次请求是否来自同一
 
 ### **终极对比**
 
-| 特性         | Cookie                | HttpSession           | JWT                         |
-| ------------ | --------------------- | --------------------- | --------------------------- |
-| **比喻**     | 积分卡                | 储物柜 + 钥匙         | 贵宾通行证                  |
-| **数据位置** | **客户端**            | **服务器端**          | **客户端**                  |
-| **状态**     | 客户端状态            | **有状态 (Stateful)** | **无状态 (Stateless)**      |
-| **安全性**   | 低 (明文)             | 高                    | 中 (签名防篡改, 载荷公开)   |
-| **扩展性**   | -                     | 差                    | **好**                      |
-| **适用场景** | 记录偏好、辅助Session | 传统单体Web应用       | **前后端分离、微服务、API** |
+| 特性       | Cookie         | HttpSession        | JWT                 |
+| -------- | -------------- | ------------------ | ------------------- |
+| **比喻**   | 积分卡            | 储物柜 + 钥匙           | 贵宾通行证               |
+| **数据位置** | **客户端**        | **服务器端**           | **客户端**             |
+| **状态**   | 客户端状态          | **有状态 (Stateful)** | **无状态 (Stateless)** |
+| **安全性**  | 低 (明文)         | 高                  | 中 (签名防篡改, 载荷公开)     |
+| **扩展性**  | -              | 差                  | **好**               |
+| **适用场景** | 记录偏好、辅助Session | 传统单体Web应用          | **前后端分离、微服务、API**   |
 
 创建 Session ID以及发送 Session ID 给浏览器和服务器识别用户需要我们手动写代码吗？
 
@@ -126,13 +116,13 @@ HTTP 协议是无状态的，服务器无法区分多次请求是否来自同一
 - **触发时机**：当你的代码第一次尝试获取当前用户的 Session 时。在你的例子中，就是 Spring Boot 准备将 HttpSession session 这个参数注入到你的 Controller 方法时。
 
 - **Tomcat 的动作**：
-
+  
   1. Tomcat 检查收到的 HTTP 请求中，有没有一个有效的 JSESSIONID Cookie。
   2. 对于一个新用户，请求中**没有**这个 Cookie。
   3. Tomcat 判定这是一个新会话，于是：
      - 在服务器内存中创建一个全新的 HttpSession 对象。
      - 调用内部的算法，生成一个**全局唯一的、足够随机、难以猜测的**字符串作为 Session ID。
-
+  
   **你完全不需要关心这个 ID 是如何生成的。**
 
 #### 2. 发送 Session ID 给浏览器 (全自动)
@@ -140,19 +130,19 @@ HTTP 协议是无状态的，服务器无法区分多次请求是否来自同一
 - **触发时机**：在处理完你的业务逻辑，准备将 HTTP 响应发送回浏览器之前。
 
 - **Tomcat 的动作**：
-
+  
   1. Tomcat 会“拦截”即将发出的响应。
-
+  
   2. 它会自动在 **HTTP 响应头 (Response Header)** 中添加一行 Set-Cookie 指令。这行指令的内容大致如下：
-
+     
      codeCode
-
+     
      ```
      Set-Cookie: JSESSIONID=A1B2C3D4E5F6G7H8I9J0K1L2; Path=/; HttpOnly
      ```
-
+  
   3. 然后，它才把完整的响应（包括你的业务数据和这个 Set-Cookie 头）发送给浏览器。
-
+  
   **你只需要 return Result.ok();，Tomcat 会自动帮你完成添加 Cookie 的所有工作。**
 
 #### 3. 服务器识别用户 (全自动)
@@ -160,33 +150,33 @@ HTTP 协议是无状态的，服务器无法区分多次请求是否来自同一
 - **触发时机**：当同一个用户发起第二次、第三次...请求时。
 
 - **浏览器和 Tomcat 的配合**：
-
+  
   1. **浏览器**：在收到上一步的 Set-Cookie 指令后，它会把 JSESSIONID=A1B2C3... 这个 Cookie 保存起来。根据 HTTP 规范，在后续访问同一个网站时，浏览器会**自动地**在 **HTTP 请求头 (Request Header)** 中附带上这个 Cookie：
-
+     
      codeCode
-
+     
      ```
      Cookie: JSESSIONID=A1B2C3D4E5F6G7H8I9J0K1L2
      ```
-
+  
   2. **Tomcat**：当它收到这个新的请求时，它会：
-
+     
      - 解析请求头，找到 Cookie 字段。
      - 提取出 JSESSIONID 的值 (A1B2C3...)。
      - 拿着这个 ID 去自己的内存会话管理器中查找对应的 HttpSession 对象。
      - 如果找到了，就把这个已经存在的 HttpSession 对象提供给你的应用程序使用（比如，注入到你的 Controller 方法中）。
-
+  
   **你不需要写任何代码去解析 Cookie 或查找 Session，你只需要在方法参数里声明你需要 HttpSession，Tomcat 和 Spring Boot 就会把它准备好并递给你。**
 
 ### 总结
 
-| 任务                            | 谁来做？                        | 你需要做什么？                                        |
-| ------------------------------- | ------------------------------- | ----------------------------------------------------- |
-| **创建 Session 和 Session ID**  | **Tomcat (Web 服务器)**         | **什么都不用做**                                      |
-| **将 Session ID 发送给浏览器**  | **Tomcat (通过 Set-Cookie 头)** | **什么都不用做**                                      |
-| **浏览器保存和发送 Cookie**     | **浏览器**                      | **什么都不用做**                                      |
-| **服务器接收并识别 Session ID** | **Tomcat (解析 Cookie 头)**     | **什么都不用做**                                      |
-| **使用 Session 存取数据**       | **你 (开发者)**                 | 调用 session.setAttribute() 和 session.getAttribute() |
+| 任务                          | 谁来做？                         | 你需要做什么？                                            |
+| --------------------------- | ---------------------------- | -------------------------------------------------- |
+| **创建 Session 和 Session ID** | **Tomcat (Web 服务器)**         | **什么都不用做**                                         |
+| **将 Session ID 发送给浏览器**     | **Tomcat (通过 Set-Cookie 头)** | **什么都不用做**                                         |
+| **浏览器保存和发送 Cookie**         | **浏览器**                      | **什么都不用做**                                         |
+| **服务器接收并识别 Session ID**     | **Tomcat (解析 Cookie 头)**     | **什么都不用做**                                         |
+| **使用 Session 存取数据**         | **你 (开发者)**                  | 调用 session.setAttribute() 和 session.getAttribute() |
 
 **你的工作被极大地简化了。** 你只需要把 HttpSession 当成一个神奇的、与每个用户绑定的 Map 来使用。你只管往里面存东西、取东西，而完全不必关心它是如何被创建、传递和识别的。
 
@@ -202,13 +192,13 @@ HTTP 协议是无状态的，服务器无法区分多次请求是否来自同一
    拦截器是 **Spring MVC 提供的一种动态拦截请求的机制**，它可以在请求到达 **Controller 之前**、**Controller 执行之后但还没返回给前端时**、以及 **请求完成后** 做一些额外的处理。
 
 - **和过滤器 Filter 的区别**
-
-  | 对比点   | 拦截器（Interceptor）                                       | 过滤器（Filter）                             |
-  | -------- | ----------------------------------------------------------- | -------------------------------------------- |
-  | 所属     | Spring MVC 提供                                             | Servlet 规范提供                             |
-  | 拦截范围 | 只拦截 Spring 管理的请求（比如 DispatcherServlet 里的请求） | 所有请求（包括静态资源）                     |
-  | 使用场景 | 登录校验、权限验证、日志打印                                | 编码设置、XSS 过滤、跨域处理                 |
-  | 颗粒度   | 更细，能拿到 Handler、ModelAndView 等                       | 较粗，只能拿到 HttpServletRequest / Response |
+  
+  | 对比点  | 拦截器（Interceptor）                            | 过滤器（Filter）                           |
+  | ---- | ------------------------------------------- | ------------------------------------- |
+  | 所属   | Spring MVC 提供                               | Servlet 规范提供                          |
+  | 拦截范围 | 只拦截 Spring 管理的请求（比如 DispatcherServlet 里的请求） | 所有请求（包括静态资源）                          |
+  | 使用场景 | 登录校验、权限验证、日志打印                              | 编码设置、XSS 过滤、跨域处理                      |
+  | 颗粒度  | 更细，能拿到 Handler、ModelAndView 等               | 较粗，只能拿到 HttpServletRequest / Response |
 
 👉 简单理解：
 
@@ -384,8 +374,6 @@ DispatcherServlet 的出现完美地解决了这个问题：
 3. **流程化**：它定义了一套标准、清晰的请求处理流程，使得整个框架的扩展和维护变得非常容易。我们之前谈到的拦截器（Interceptor）就是在这个流程中被插入进去的。
 
 ------
-
-
 
 ##### 三、它是如何工作的？（核心工作流程）
 
@@ -591,28 +579,28 @@ Servlet/Controller
 
 6. 重要的知识点 & 注意事项
 
-1. **和拦截器的区别**
+7. **和拦截器的区别**
+   
+   | 对比点  | 过滤器（Filter）                     | 拦截器（Interceptor）         |
+   | ---- | ------------------------------- | ------------------------ |
+   | 规范   | Servlet 规范                      | Spring 提供                |
+   | 拦截范围 | 所有请求（包括静态资源）                    | 只拦截 Spring Controller 请求 |
+   | 生命周期 | 容器管理（init → doFilter → destroy） | 由 Spring 容器管理            |
+   | 使用场景 | 编码、跨域、XSS、防止 SQL 注入             | 登录校验、权限、日志、性能监控          |
 
-   | 对比点   | 过滤器（Filter）                      | 拦截器（Interceptor）          |
-   | -------- | ------------------------------------- | ------------------------------ |
-   | 规范     | Servlet 规范                          | Spring 提供                    |
-   | 拦截范围 | 所有请求（包括静态资源）              | 只拦截 Spring Controller 请求  |
-   | 生命周期 | 容器管理（init → doFilter → destroy） | 由 Spring 容器管理             |
-   | 使用场景 | 编码、跨域、XSS、防止 SQL 注入        | 登录校验、权限、日志、性能监控 |
-
-2. **什么时候用过滤器，什么时候用拦截器？**
-
+8. **什么时候用过滤器，什么时候用拦截器？**
+   
    - **过滤器**：通用的、和 Spring 无关的逻辑（如编码、跨域、安全过滤）。
    - **拦截器**：依赖 Spring 的业务逻辑（如登录校验、权限控制、接口日志）。
 
-3. **性能注意点**
+9. **性能注意点**
     过滤器属于请求的最外层，如果逻辑写得过重，会影响所有请求的性能。
 
-4. **常见面试题**
-
-   - 过滤器和拦截器的区别？
-   - 过滤器能拦截静态资源吗？（能）
-   - 在 Spring Boot 中如何注册过滤器？（@WebFilter / FilterRegistrationBean）
+10. **常见面试题**
+    
+    - 过滤器和拦截器的区别？
+    - 过滤器能拦截静态资源吗？（能）
+    - 在 Spring Boot 中如何注册过滤器？（@WebFilter / FilterRegistrationBean）
 
 ------
 
@@ -631,8 +619,6 @@ Servlet/Controller
 - **过滤器**是 Servlet 规范的“全局保安”，在请求进入 Spring 前生效，适合做编码、跨域、安全类处理；
 - **拦截器**是 Spring MVC 的“局部保安”，在 Controller 前后生效，适合做业务相关的校验与日志。
 - 在企业中，二者经常 **搭配使用**：过滤器做“通用防护”，拦截器做“业务逻辑校验”。
-
-
 
 ## **集群Session共享问题**
 
@@ -669,3 +655,100 @@ Servlet/Controller
 ## 缓存穿透
 
 ![image-20250904181435211](E:\Typora picture\image-20250904181435211.png)
+
+## 缓存雪崩
+
+![image-20250904194108457](E:\Typora picture\image-20250904194108457.png)
+
+## 缓存击穿
+
+![image-20250904195943186](E:\Typora picture\image-20250904195943186.png)
+
+## 乐观锁和悲观锁
+
+![image-20250906164837738](E:\Typora picture\image-20250906164837738.png)
+
+## Redission实现分布式锁
+
+redission是一个redis官方提供的工具，里面封装了很多好东西不需要我们自己去实现
+
+官方文档：[Redisson分布式锁使用详解-阿里云开发者社区](https://developer.aliyun.com/article/1650839)
+
+使用步骤：
+
+```xml
+<dependency>
+    <groupId>org.redisson</groupId>
+    <artifactId>redisson</artifactId>
+    <version>3.16.6</version>
+</dependency>
+```
+
+配置客户端：
+
+```java
+import org.redisson.Redisson;
+import org.redisson.api.RedissonClient;
+import org.redisson.config.Config;
+
+public class RedissonManager {
+    private static RedissonClient redisson;
+
+    static {
+        Config config = new Config();
+        config.useSingleServer().setAddress("redis://127.0.0.1:6379");
+        redisson = Redisson.create(config);
+    }
+
+    public static RedissonClient getRedisson() {
+        return redisson;
+    }
+}
+```
+
+其余的操作直接看文档吧，很全。
+
+## Lua脚本管理
+
+```java
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.support.PathMatchingResourcePatternResolver;
+import org.springframework.data.redis.core.script.DefaultRedisScript;
+
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
+
+public class LuaScriptLoader {
+    // 缓存：脚本名 -> Resource（不直接存 DefaultRedisScript，避免 resultType 冲突）
+    private static final Map<String, Resource> SCRIPT_RESOURCE_CACHE = new HashMap<>();
+    static {
+        try {
+            PathMatchingResourcePatternResolver resolver = new PathMatchingResourcePatternResolver();
+            Resource[] resources = resolver.getResources("classpath*:lua/*.lua");
+
+            for (Resource resource : resources) {
+                String name = resource.getFilename().replace(".lua", "");
+                SCRIPT_RESOURCE_CACHE.put(name, resource);
+            }
+        } catch (IOException e) {
+            throw new RuntimeException("加载 Lua 脚本失败", e);
+        }
+    }
+
+    /**
+     * 获取脚本，并指定返回类型
+     */
+    public static <T> DefaultRedisScript<T> getScript(String name, Class<T> resultType) {
+        Resource resource = SCRIPT_RESOURCE_CACHE.get(name);
+        if (resource == null) {
+            throw new IllegalArgumentException("未找到脚本: " + name);
+        }
+
+        DefaultRedisScript<T> script = new DefaultRedisScript<>();
+        script.setLocation(resource);
+        script.setResultType(resultType);
+        return script;
+    }
+}
+```
